# qaagent

./: .claud  .cursorrules  .gitattributes  .gitignore  AGENTS.md  AUTO_FIX_STATUS.md  CLAUDE.md  QUICK_START.md  README.md  SETUP.md  WEEK2_STATUS.md  ai-handoff.yaml  handoff-state.json  new_file.txt  package-lock.json  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-llm.txt  requirements-mcp.txt  requirements-ui.txt  requirements.txt
.claude/: settings.local.json
.qaagent/: appdoc.json
docs/: AGENT_WORKFLOW.md  AUTO_FIX_GUIDE.md  AUTO_FIX_UI_DESIGN.md  BROWSER_AUTOMATION_STRATEGY.md  CLAUDE_REVIEW_OF_CODEX.md  CLAUDE_REVIEW_WEEK1_PLAN.md  CLAUDE_VALIDATION_REPORT.md  DEVELOPER_NOTES.md  HANDOFF.md  HANDOFF_TO_CODEX.md  HYBRID_SETUP.md  LLM_POWERED_FIXES.md  MAC_M1_VALIDATION.md  MCP_AND_AGENTS_GUIDE.md  PHASE_1_ANALYSIS.md  PHASE_1_IMPLEMENTATION_PLAN.md  PHASE_2_ANALYSIS.md  PHASE_2_AUTONOMOUS_QA_AGENT.md  PHASE_2_HANDOFF.md  PHASE_2_WEEK1_GUIDE.md  PROJECT_STATUS.md  ROADMAP.md  SCHEMATHESIS_API_CHANGES.md  UI_GETTING_STARTED.md  WEEK2_DAY2_VALIDATION_REPORT.md  WEEK2_FINAL_VALIDATION_REPORT.md  WEEK2_HANDOFF_TO_CODEX.md  WEEK3_DAY3_VALIDATION_REPORT.md  WEEK3_DAY4_HANDOFF.md  WEEK3_FINAL_VALIDATION_REPORT.md  WEEK3_PLAN.md  WINDOWS_SETUP.md  WORKSPACE_GUIDE.md  decision_log.md  sonic_grid_app_data_from_anthropic.txt
examples/: README.md
handoff/: ACCEPTANCE_CRITERIA.md  ANALYZERS_SPEC.md  API_SPEC.md  ARCHITECTURE_ANALYSIS.md  CHECKPOINT1_SPRINT2_SUMMARY.md  CHECKPOINT1_SUMMARY.md  CHECKPOINT2_SUMMARY.md  CHECKPOINT3_SUMMARY.md  CLAUDE_ALIGNMENT_REVIEW.md  CLAUDE_HANDOFF_SUMMARY.md  CLAUDE_SPRINT1_CHECKPOINT1.md  CLAUDE_SPRINT1_CHECKPOINT2.md  CLAUDE_SPRINT1_CHECKPOINT3.md  CLAUDE_SPRINT1_COMPLETE.md  CLAUDE_SPRINT2_CHECKPOINT1.md  CLAUDE_SPRINT2_CHECKPOINT2.md  CLAUDE_SPRINT2_CHECKPOINT3.md  CLAUDE_SPRINT2_CHECKPOINT4.md  CODEX_ANALYSIS_PLAN.md  CODEX_COLOR_ENHANCEMENTS.md  CODEX_DELIVERY_REVIEW.md  CODEX_PHASE2_NEXT.md  CODEX_PHASE2_REVIEW.md  CODEX_PHASE3_REPORTS.md  CODEX_STARTUP.md  Claude_Startup_Prompt.txt  Codex_Startup_Prompt.txt  DASHBOARD_API_SPEC.md  DATA_MODELS.md  DECISIONS.md  EDGE_CASES.md  EVIDENCE_STORE_SPEC.md  HANDOFF_TO_CODEX_COLORS.md  HANDOFF_TO_CODEX_SPRINT2.md  HANDOFF_TO_CODEX_SPRINT3.md  PHASE3_COMPLETION_REPORT.md  PRIVACY_AND_AI_POLICY.md  PRODUCTION_READINESS_CHECKLIST.md  PROMPT_GUIDELINES.md  README_Codex_Handoff.md  (+17 more)
scripts/: validate_week1.sh  validate_week2.sh
templates/: cycle.md  decision_log.md  feedback.md  handoff_impl.md  handoff_plan.md  implementation_log.md  (+2 more)
(+535 files in other folders)
